<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">GeogramOne</string>
	<string name="action_commands">Send Command</string>
	<string name="action_devices">Manage Devices</string>
   <string name="action_clearmap">Clear Map</string>
	<string name="action_devices_add">Add Device</string>
	<string name="devedit">Edit</string>
	<string name="devdelete">Delete</string>
	<string name="deviceNameLabel">Choose a device</string>
	<string name="textSelectDevice">Select Device</string>
	<string name="commandLabel">Choose a command</string>
	<string name="textSelectCommand">Select Command</string>
	<string name="sendCmdLabel">Send Command</string>
	<string name="devstorepin">Store PIN</string>
	<string name="devshowpin">Show PIN</string>
	<string name="param1">Parameter 1</string>
	<string name="param2">Parameter 2</string>
	<string name="param3">Parameter 3</string>
	<string name="action_debug">Debug</string>

</resources>
